# photoSearch

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai_module/: Dockerfile  clip.py  params.json  pyproject.toml  utils.py
backend/: app.py  backend_params.json  embedding.py  pyproject.toml  utils.py
model/: app.py
server/: Dockerfile  app.py  database.py  pyproject.toml  utils.py
