[tool.poetry]
name = "photosearch"
version = "0.1.0"
description = "Search photos with prompt"
authors = ["Milutin-S <studen.m98@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
qdrant-client = "^1.7.3"
loguru = "^0.7.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
